# llm-vault

embedding/docs/: embedding_technology_survey.html
tokenize/: requirements.txt
tokenize/docs/: LLM_TOKENIZER_SURVEY.html  tokenizer_analysis.html
tokenize/examples/: tokenize_text.py
tokenize/res/: original_novel_en.txt  original_novel_zh.txt
tokenize/vocab/: SHA256SUMS
tokenizer/: .gitignore  README.md  TOKENIZER_ANALYSIS.html  TOKENIZER_ANALYSIS.md  pyproject.toml
tokenizer/bpe_demo/: __init__.py  __main__.py  adapters.py  cli.py  core.py  report.py
tokenizer/bpe_demo/samples/: harbor_clock.en.txt  harbor_clock.zh.txt
tokenizer/tests/: test_adapters.py  test_cli.py  test_core_report.py
tokenizer/vocabularies/: README.md
