[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-bpe-demo"
version = "0.1.0"
description = "Compare English and Chinese tokenization across leading LLM tokenizers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.52.0",
    "google-genai>=1.16.0",
    "huggingface-hub>=0.31.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.0",
]

[project.scripts]
bpe-demo = "bpe_demo.cli:main"

[tool.setuptools.packages.find]
include = ["bpe_demo*"]

[tool.setuptools.package-data]
bpe_demo = ["samples/*.txt"]
